validateForm/linguagemFormParser.java
// Generated from C:/lei20_21_s4_2dg_04/grammar\linguagemForm.g4 by ANTLR 4.9.1
package eapli.validateForm;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class linguagemFormParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, IF=2, STR_STATE=3, SIZE=4, BETWEEN=5, SIDE_BAR=6, AND=7, IS=8, 
		END=9, COLON=10, POINT=11, QUOTE_MARKS=12, VERIFICATION_OP=13, LOGIC_OP=14, 
		BOOLEAN_OP=15, EQUAL_OR_NOT=16, CONDITION_OP=17, OPTION_TYPE=18, MATH_OP=19, 
		OBLIGATION=20, STRING=21, INTEGER=22, DATA=23, YEAR=24, MONTH=25, DAY=26;
	public static final int
		RULE_start = 0, RULE_statement_verification = 1, RULE_statement_configuration = 2, 
		RULE_if_func = 3, RULE_content = 4, RULE_gap = 5, RULE_config = 6, RULE_ctntconditions = 7, 
		RULE_conditions = 8, RULE_condition = 9, RULE_stringCondition = 10, RULE_intExpression = 11, 
		RULE_stringValue = 12, RULE_stringWithQuoteMarks = 13, RULE_intValue = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "statement_verification", "statement_configuration", "if_func", 
			"content", "gap", "config", "ctntconditions", "conditions", "condition", 
			"stringCondition", "intExpression", "stringValue", "stringWithQuoteMarks", 
			"intValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'then'", "'if'", null, null, null, null, null, null, "';'", "':'", 
			"'.'", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "IF", "STR_STATE", "SIZE", "BETWEEN", "SIDE_BAR", "AND", 
			"IS", "END", "COLON", "POINT", "QUOTE_MARKS", "VERIFICATION_OP", "LOGIC_OP", 
			"BOOLEAN_OP", "EQUAL_OR_NOT", "CONDITION_OP", "OPTION_TYPE", "MATH_OP", 
			"OBLIGATION", "STRING", "INTEGER", "DATA", "YEAR", "MONTH", "DAY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "linguagemForm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public linguagemFormParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public Statement_verificationContext statement_verification() {
			return getRuleContext(Statement_verificationContext.class,0);
		}
		public Statement_configurationContext statement_configuration() {
			return getRuleContext(Statement_configurationContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		return start(0);
	}

	private StartContext start(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StartContext _localctx = new StartContext(_ctx, _parentState);
		StartContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_start, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(35);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						_localctx = new StartContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_start);
						setState(31);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(32);
						statement_verification();
						}
						break;
					case 2:
						{
						_localctx = new StartContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_start);
						setState(33);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(34);
						statement_configuration();
						}
						break;
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Statement_verificationContext extends ParserRuleContext {
		public If_funcContext if_func() {
			return getRuleContext(If_funcContext.class,0);
		}
		public Statement_verificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_verification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterStatement_verification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitStatement_verification(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitStatement_verification(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Statement_verificationContext statement_verification() throws RecognitionException {
		Statement_verificationContext _localctx = new Statement_verificationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement_verification);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			if_func();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_configurationContext extends ParserRuleContext {
		public ConfigContext config() {
			return getRuleContext(ConfigContext.class,0);
		}
		public Statement_configurationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_configuration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterStatement_configuration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitStatement_configuration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitStatement_configuration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Statement_configurationContext statement_configuration() throws RecognitionException {
		Statement_configurationContext _localctx = new Statement_configurationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement_configuration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			config();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_funcContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(linguagemFormParser.IF, 0); }
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode END() { return getToken(linguagemFormParser.END, 0); }
		public If_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterIf_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitIf_func(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitIf_func(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_funcContext if_func() throws RecognitionException {
		If_funcContext _localctx = new If_funcContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_if_func);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(IF);
			setState(45);
			conditions(0);
			setState(46);
			match(T__0);
			setState(47);
			content(0);
			setState(48);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContentContext extends ParserRuleContext {
		public CtntconditionsContext ctntconditions() {
			return getRuleContext(CtntconditionsContext.class,0);
		}
		public ConfigContext config() {
			return getRuleContext(ConfigContext.class,0);
		}
		public If_funcContext if_func() {
			return getRuleContext(If_funcContext.class,0);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		return content(0);
	}

	private ContentContext content(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ContentContext _localctx = new ContentContext(_ctx, _parentState);
		ContentContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_content, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(51);
				ctntconditions();
				}
				break;
			case 2:
				{
				setState(52);
				config();
				}
				break;
			case 3:
				{
				setState(53);
				if_func();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(64);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(62);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new ContentContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_content);
						setState(56);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(57);
						ctntconditions();
						}
						break;
					case 2:
						{
						_localctx = new ContentContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_content);
						setState(58);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(59);
						config();
						}
						break;
					case 3:
						{
						_localctx = new ContentContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_content);
						setState(60);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(61);
						if_func();
						}
						break;
					}
					} 
				}
				setState(66);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class GapContext extends ParserRuleContext {
		public List<TerminalNode> INTEGER() { return getTokens(linguagemFormParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(linguagemFormParser.INTEGER, i);
		}
		public TerminalNode AND() { return getToken(linguagemFormParser.AND, 0); }
		public GapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gap; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterGap(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitGap(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitGap(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GapContext gap() throws RecognitionException {
		GapContext _localctx = new GapContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_gap);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(INTEGER);
			setState(68);
			match(AND);
			setState(69);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigContext extends ParserRuleContext {
		public ConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config; }
	 
		public ConfigContext() { }
		public void copyFrom(ConfigContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ValBetweenContext extends ConfigContext {
		public TerminalNode INTEGER() { return getToken(linguagemFormParser.INTEGER, 0); }
		public TerminalNode BETWEEN() { return getToken(linguagemFormParser.BETWEEN, 0); }
		public GapContext gap() {
			return getRuleContext(GapContext.class,0);
		}
		public TerminalNode END() { return getToken(linguagemFormParser.END, 0); }
		public ValBetweenContext(ConfigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterValBetween(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitValBetween(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitValBetween(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValObligatoryContext extends ConfigContext {
		public TerminalNode INTEGER() { return getToken(linguagemFormParser.INTEGER, 0); }
		public TerminalNode IS() { return getToken(linguagemFormParser.IS, 0); }
		public TerminalNode OBLIGATION() { return getToken(linguagemFormParser.OBLIGATION, 0); }
		public TerminalNode END() { return getToken(linguagemFormParser.END, 0); }
		public ValObligatoryContext(ConfigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterValObligatory(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitValObligatory(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitValObligatory(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValSizeContext extends ConfigContext {
		public List<TerminalNode> INTEGER() { return getTokens(linguagemFormParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(linguagemFormParser.INTEGER, i);
		}
		public TerminalNode SIZE() { return getToken(linguagemFormParser.SIZE, 0); }
		public TerminalNode END() { return getToken(linguagemFormParser.END, 0); }
		public ValSizeContext(ConfigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterValSize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitValSize(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitValSize(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConfigContext config() throws RecognitionException {
		ConfigContext _localctx = new ConfigContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_config);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new ValSizeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(INTEGER);
				setState(72);
				match(SIZE);
				setState(73);
				match(INTEGER);
				setState(74);
				match(END);
				}
				break;
			case 2:
				_localctx = new ValBetweenContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(INTEGER);
				setState(76);
				match(BETWEEN);
				setState(77);
				gap();
				setState(78);
				match(END);
				}
				break;
			case 3:
				_localctx = new ValObligatoryContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				match(INTEGER);
				setState(81);
				match(IS);
				setState(82);
				match(OBLIGATION);
				setState(83);
				match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CtntconditionsContext extends ParserRuleContext {
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public TerminalNode END() { return getToken(linguagemFormParser.END, 0); }
		public CtntconditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctntconditions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterCtntconditions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitCtntconditions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitCtntconditions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CtntconditionsContext ctntconditions() throws RecognitionException {
		CtntconditionsContext _localctx = new CtntconditionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ctntconditions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			conditions(0);
			setState(87);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionsContext extends ParserRuleContext {
		public ConditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditions; }
	 
		public ConditionsContext() { }
		public void copyFrom(ConditionsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConditionsNoOpContext extends ConditionsContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ConditionsNoOpContext(ConditionsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterConditionsNoOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitConditionsNoOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitConditionsNoOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConditionsOpContext extends ConditionsContext {
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public TerminalNode CONDITION_OP() { return getToken(linguagemFormParser.CONDITION_OP, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode END() { return getToken(linguagemFormParser.END, 0); }
		public ConditionsOpContext(ConditionsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).enterConditionsOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof linguagemFormListener ) ((linguagemFormListener)listener).exitConditionsOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof linguagemFormVisitor ) return ((linguagemFormVisitor<? extends T>)visitor).visitConditionsOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionsContext conditions() throws RecognitionException {
		return conditions(0);
	}

	private ConditionsContext conditions(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConditionsContext _localctx = new ConditionsContext(_ctx, _parentState);
		ConditionsContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_conditions, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ConditionsNoOpContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(90);
			condition();
			}
			_ctx.stop = _input.LT(-1);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ConditionsOpContext(new ConditionsContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_conditions);
					setState(92);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(93);
					match(CONDITION_OP);
					setState(94);
					condition();
					setState(95);
					match(END);
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
